<resources>
    <string name="app_name">Pesquisa de opiniao</string>
    <string name="participar_da_pesquisa">Participar da pesquisa</string>
    <string name="checar_meu_voto">Checar meu voto</string>
    <string name="finalizar">Finalizar</string>
    <string name="pesquisa_sobre_a_qualidade_do_ensino">Pesquisa sobre a qualidade do ensino</string>
    <string name="nome_completo">Nome completo: </string>
    <string name="prontuario">Prontuário: </string>
    <string name="preencha_os_campos">Preencha os campos</string>
    <string name="confirmar">Confirmar</string>
    <string name="votar_titulo">Avalie a qualidade do ensino da faculdade</string>
    <string name="otimo">Ótimo</string>
    <string name="bom">Bom</string>
    <string name="regular">Regular</string>
    <string name="ruim">Ruim</string>
    <string name="enviar">Enviar</string>
    <string name="insira_o_codigo_do_voto">Insira o código do voto</string>
    <string name="codigo">Código: </string>
    <string name="checar">Checar</string>
    <string name="resultados_da_pesquisa">Resultados da pesquisa</string>
    <string name="numero_de_participantes">Número de participantes: </string>
    <string name="ruimdoisponto">Ruim:</string>
    <string name="regulardoisponto">Regular:</string>
    <string name="bomdoisponto">Bom:</string>
    <string name="otimodoisponto">Ótimo:</string>
    <string name="votos">Votos</string>
    <string name="voltar">Voltar</string>
    <string name="erro_prontuario_usado_ou_vazio">&lt;ERRO&gt; Esse prontuário já votou ou os dados estão vazios</string>
    <string name="erro_ao_recuperar_nome_prontuario">&lt;ERRO&gt; Falha ao recuperar nome e prontuario</string>
    <string name="selecione_uma_das_opcoes">Selecione uma das opções</string>
    <string name="opiniao_invalida">Opinião inválida</string>
    <string name="fechar">Fechar</string>
    <string name="copiar_id">Copiar Id</string>
    <string name="id_copiado">ID Copiado</string>
    <string name="id_copiado_para_a_area_de_transferencia">ID copiado para a área de transferência</string>
    <string name="seu_id">SEU ID</string>
    <string name="sua_opiniao">Sua opinião</string>
    <string name="id_nao_encontrado">ID não encontrado</string>
</resources>