<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.votar.VotarActivity">

    <TextView
        android:id="@+id/textview_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/votar_titulo"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radiogroup_votar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_titulo"
        android:layout_marginTop="64dp">

        <RadioButton
            android:id="@+id/radiobutton_otimo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otimo"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/radiobutton_bom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bom"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/radiobutton_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regular"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/radiobutton_ruim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ruim"
            android:textSize="20sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/button_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiogroup_votar"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>