<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/textview_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesquisa_sobre_a_qualidade_do_ensino"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_participar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participar_da_pesquisa"
        app:layout_constraintTop_toBottomOf="@id/textview_titulo"
        app:layout_constraintBottom_toTopOf="@+id/button_checar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="160dp"/>

    <Button
        android:id="@+id/button_checar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checar_meu_voto"
        app:layout_constraintTop_toBottomOf="@id/button_participar"
        app:layout_constraintStart_toStartOf="@id/button_participar"
        app:layout_constraintEnd_toEndOf="@id/button_participar"
        app:layout_constraintBottom_toTopOf="@id/button_finalizar"/>

    <Button
        android:id="@+id/button_finalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalizar"
        app:layout_constraintStart_toStartOf="@id/button_participar"
        app:layout_constraintEnd_toEndOf="@id/button_participar"
        app:layout_constraintTop_toBottomOf="@id/button_checar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>